ajustes no tratamento de exceções emitidas por terceiros

--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -1,6 +1,7 @@
 api.message.associado.not_found=Associado com cpf {0} não encontrada.
 api.message.associado.unable=Associado com cpf {0} não autorizado.
 api.message.pauta.not_found=Pauta com id {0} não encontrada.
+api.message.third_part.error=Não foi possível se comunicar com serviços de terceiros.
 api.message.votacao.not_expired=A votação ainda não foi encerrada.
 api.message.votacao.not_found=Votação com id {0} não encontrada.
 api.message.voto.already_computed=Voto já computado.
